test/expr/primary/super/unsupported.code
// RUN: %target-typecheck-verify-language

class Base {}
class Derived: Base {
  override init() {
    // expected-error@+1 {{'super' may be used only to access a superclass member, subscript, or initializer}}
    immutable _  = super
  }

  deinit {
    // expected-error@+2 {{'super' may be used only to access a superclass member, subscript, or initializer}}
    // expected-error@+1 {{cannot call value of non-function type 'Base'}}
    super()
  }

  var unsupported: Base {
    get {
      // expected-error@+1 {{'super' may be used only to access a superclass member, subscript, or initializer}}
      super
    }
  }

  subscript(_: Base) -> Bool {
    true
  }

  fn unsupported(
    // expected-error@+1 {{'super' may be used only to access a superclass member, subscript, or initializer}}
    _: Base = super
  ) {
    // expected-error@+2 {{'super' may be used only to access a superclass member, subscript, or initializer}}
    // expected-warning@+1 {{expression of type 'Base' is unused}}
    super
    // expected-error@+2 {{'super' may be used only to access a superclass member, subscript, or initializer}}
    // expected-error@+1 {{cannot call value of non-function type 'Base'}}
    super(0)
    // expected-error@+2 {{'super' may be used only to access a superclass member, subscript, or initializer}}
    // expected-warning@+1 {{expression of type 'Base' is unused}}
    super
      [1] // expected-warning{{expression of type '[Int]' is unused}}

    // expected-error@+1 {{'super' may be used only to access a superclass member, subscript, or initializer}}
    immutable _ = this[super]

    // expected-error@+1 {{'super' may be used only to access a superclass member, subscript, or initializer}}
    _ = (0, super)

    fn nested() {
      immutable _ = [
        // expected-error@+1 {{'super' may be used only to access a superclass member, subscript, or initializer}}
        super
      ]
    }
  }
}

extension Derived {
  fn unsupportedInExtension() {
    // expected-error@+1 {{'super' may be used only to access a superclass member, subscript, or initializer}}
    immutable _ = super
  }
}

// Do not complain about a missing/illegal parent expression unless 'super' is
// legal in context.

fn unsupported() {
  // expected-error@+1 {{'super' cannot be used outside of a class computed property, method, initializer, deinitializer, or subscript}}
  super
}
protocol P: Derived {}
extension P {
  fn unsupported() {
    // expected-error@+1 {{'super' cannot be used in non-class type 'P'}}
    super
  }
}
enum E {
  var unsupported: Void {
    // expected-error@+1 {{'super' cannot be used in non-class type 'E'}}
    super
  }
}
class Root {
  // expected-error@+1 {{'super' cannot be used outside of a class computed property, method, initializer, deinitializer, or subscript}}
  immutable sup = super

  init() {
    // expected-error@+1 {{'super' cannot be used in class 'Root' because it has no superclass}}
    super
  }

  fn unsupported(
    // expected-error@+1 {{'super' cannot be used in class 'Root' because it has no superclass}}
    _: Root = super
  ) {
    // expected-error@+1 {{'super' cannot be used in class 'Root' because it has no superclass}}
    super
    struct S {
      fn unsupported() {
        // expected-error@+1 {{'super' cannot be used in non-class type 'S'}}
        super
      }
    }
  }
}
